# LexAegis-ai

./: .dockerignore  .env.docker.example  .env.example  .gitignore  PROJECT_DETAILS.md  README.md  docker-compose.local.yml  docker-compose.production.yml
backend/: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  requirements-eval.txt  requirements-phase1.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  citation.py  confidence.py  graph.py  groundedness.py  guard.py  output_safety_agent.py  planner.py  query_understanding.py  reasoning.py  retrieval_agent.py  state.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/auth/: __init__.py  models.py  supabase.py
backend/app/cache/: __init__.py  semantic_cache.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  startup.py
backend/app/ingestion/: __init__.py  chunking.py  loaders.py  models.py  pipeline.py
backend/app/llm/: __init__.py  base.py  factory.py  gemini_client.py  ollama_client.py  provider.py  runtime.py
backend/app/middleware/: __init__.py  request_context.py  tenant.py
backend/app/observability/: __init__.py  cost.py  tracing.py
backend/app/retrieval/: __init__.py  (+8 more)
backend/tests/: conftest.py  test_agents.py  test_auth.py  test_chunking.py  test_config.py  test_cors.py  test_endpoints_phase3.py  test_health.py  test_jwt_algorithms.py  test_llm.py  test_phase4.py  test_pii_presidio.py  test_rate_limit.py  test_reranker.py  test_retrieval.py  test_safety.py  test_workflow.py
(+79 files in other folders)
